--- a/src/presentacion/pnCancelarVuelo.form
+++ b/src/presentacion/pnCancelarVuelo.form
@@ -119,14 +119,8 @@
         </Component>
         <Component class="javax.swing.JButton" name="btCancelarVuelo">
           <Properties>
-            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="ff" green="ff" red="ff" type="rgb"/>
-            </Property>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Roboto" size="18" style="0"/>
-            </Property>
-            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="0" green="0" red="0" type="rgb"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Cancelar"/>
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
@@ -140,14 +134,14 @@
         </Component>
         <Component class="javax.swing.JLabel" name="lbID">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Id:"/>
+            <Property name="text" type="java.lang.String" value="ID vuelo:"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="txtID">
         </Component>
         <Component class="javax.swing.JLabel" name="lbAerolinea">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Aerolinea:"/>
+            <Property name="text" type="java.lang.String" value="ID Aerolinea:"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="txtAerolinea">
