--- a/src/presentacion/pnEditarVuelo.form
+++ b/src/presentacion/pnEditarVuelo.form
@@ -190,14 +190,8 @@
         </Component>
         <Component class="javax.swing.JButton" name="btEdicionVuelo">
           <Properties>
-            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="ff" green="ff" red="ff" type="rgb"/>
-            </Property>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Roboto" size="18" style="0"/>
-            </Property>
-            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="0" green="0" red="0" type="rgb"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Editar"/>
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
@@ -239,7 +233,7 @@
         </Component>
         <Component class="javax.swing.JLabel" name="lbID">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Id :"/>
+            <Property name="text" type="java.lang.String" value="ID :"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="txtID">
